--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-jwt":"^5.3.0",
+    "jsonwebtoken":"^7.4.1",
     "mongoose": "^4.6.4",
     "serve-favicon": "^2.3.0",
     "compression":"1.6.2",
