--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-runtime":"^6.23.0",
+    "babel-plugin-transform-object-rest-spread":"^6.23.0",
+    "babel-plugin-transform-decorators-legacy":"^1.3.4",
     "babel-preset-es2015":"^6.24.1",
     "copy-webpack-plugin": "^4.0.0",
     "cross-env": "^3.0.0",
